--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
+    "build:ui": "rm -rf build && cd ../fso/part2/phonebook && npm run build && cp -r build ../../../fsop3",
     "deploy": "git add . && git commit -m uibuild && git push heroku main",
     "deploy:full": "npm run build:ui && npm run deploy",    
     "logs:prod": "heroku logs --tail"
