--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "dev": "nodemon index.js",
     "build:ui": "rm -rf build && cd ../fso/part2/phonebook && npm run build && cp -r build ../../../fsop3",
     "deploy": "git add . && git commit -m uibuild && git push heroku main",
-    "deploy:full": "npm run build:ui && npm run deploy",    
+    "deploy:full": "npm run build:ui && npm run deploy",
     "logs:prod": "heroku logs --tail"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "mongoose": "^6.5.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
