--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:ui": "rm -rf build && cd ../fso/part2/phonebook && npm run build && cp -r build ../../../fsop3",
     "deploy": "git add . && git commit -m uibuild && git push heroku main",
     "deploy:full": "npm run build:ui && npm run deploy",
-    "logs:prod": "heroku logs --tail"
+    "logs:prod": "heroku logs --tail",
+    "lint": "npx eslint ."
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +23,7 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "eslint": "^8.21.0",
     "nodemon": "^2.0.19"
   }
 }
